force-app/main/default/objects/CommercientSF__PorMasterDetail__c/CommercientSF__PorMasterDetail__c.object-meta.xml
<CustomObject>
    <label>Syspro Purchase Order Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Purchase Order Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>