force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__AssetFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AssetFlag__c</fullName>
    <description>AssetFlag</description>
    <label>AssetFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>