force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__AutoVoucherReqd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AutoVoucherReqd__c</fullName>
    <description>AutoVoucherReqd</description>
    <label>AutoVoucherReqd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>