force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__CapexCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CapexCode__c</fullName>
    <description>CapexCode</description>
    <label>CapexCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>