force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__CapexLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CapexLine__c</fullName>
    <description>CapexLine</description>
    <label>CapexLine</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>