force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__IncludeInMrp__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__IncludeInMrp__c</fullName>
    <description>IncludeInMrp</description>
    <label>IncludeInMrp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>