force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__Line__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Line__c</fullName>
    <description>Line</description>
    <label>Line</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>