force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MBlanketContLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MBlanketContLine__c</fullName>
    <description>MBlanketContLine</description>
    <label>MBlanketContLine</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>