force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MBlanketDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MBlanketDate__c</fullName>
    <description>MBlanketDate</description>
    <label>MBlanketDate</label>
    <type>DateTime</type>
</CustomField>