force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MCompleteFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MCompleteFlag__c</fullName>
    <description>MCompleteFlag</description>
    <label>MCompleteFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>