force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MContractNumber__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MContractNumber__c</fullName>
    <description>MContractNumber</description>
    <label>MContractNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>