force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MConvFactOrdUm__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MConvFactOrdUm__c</fullName>
    <description>MConvFactOrdUm</description>
    <label>MConvFactOrdUm</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>