force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MConvFactPrcUm__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MConvFactPrcUm__c</fullName>
    <description>MConvFactPrcUm</description>
    <label>MConvFactPrcUm</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>