force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MDecimalsToPrt__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MDecimalsToPrt__c</fullName>
    <description>MDecimalsToPrt</description>
    <label>MDecimalsToPrt</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>