force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MDiscPct1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MDiscPct1__c</fullName>
    <description>MDiscPct1</description>
    <label>MDiscPct1</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>