force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MDiscPct2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MDiscPct2__c</fullName>
    <description>MDiscPct2</description>
    <label>MDiscPct2</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>