force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MDiscPct3__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MDiscPct3__c</fullName>
    <description>MDiscPct3</description>
    <label>MDiscPct3</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>