force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MDiscValFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MDiscValFlag__c</fullName>
    <description>MDiscValFlag</description>
    <label>MDiscValFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>