force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MDiscValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MDiscValue__c</fullName>
    <description>MDiscValue</description>
    <label>MDiscValue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>