force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MEccFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MEccFlag__c</fullName>
    <description>MEccFlag</description>
    <label>MEccFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>