force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MEdiActionFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MEdiActionFlag__c</fullName>
    <description>MEdiActionFlag</description>
    <label>MEdiActionFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>