force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MEdiExtractFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MEdiExtractFlag__c</fullName>
    <description>MEdiExtractFlag</description>
    <label>MEdiExtractFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>