force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MForeignPrice__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MForeignPrice__c</fullName>
    <description>MForeignPrice</description>
    <label>MForeignPrice</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>