force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MGlCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MGlCode__c</fullName>
    <description>MGlCode</description>
    <label>MGlCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>