force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MInspectionReqd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MInspectionReqd__c</fullName>
    <description>MInspectionReqd</description>
    <label>MInspectionReqd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>