force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MJob__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MJob__c</fullName>
    <description>MJob</description>
    <label>MJob</label>
    <length>255</length>
    <type>Text</type>
</CustomField>