force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MJobLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MJobLine__c</fullName>
    <description>MJobLine</description>
    <label>MJobLine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>