force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MLastReceiptDat__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MLastReceiptDat__c</fullName>
    <description>MLastReceiptDat</description>
    <label>MLastReceiptDat</label>
    <type>DateTime</type>
</CustomField>