force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MLatestDueDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MLatestDueDate__c</fullName>
    <description>MLatestDueDate</description>
    <label>MLatestDueDate</label>
    <type>DateTime</type>
</CustomField>