force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MLctConfirmed__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MLctConfirmed__c</fullName>
    <description>MLctConfirmed</description>
    <label>MLctConfirmed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>