force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MMulDivAlloc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MMulDivAlloc__c</fullName>
    <description>MMulDivAlloc</description>
    <label>MMulDivAlloc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>