force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MMulDivPrc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MMulDivPrc__c</fullName>
    <description>MMulDivPrc</description>
    <label>MMulDivPrc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>