force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MNonsUnitMass__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MNonsUnitMass__c</fullName>
    <description>MNonsUnitMass</description>
    <label>MNonsUnitMass</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>