force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MNonsUnitVol__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MNonsUnitVol__c</fullName>
    <description>MNonsUnitVol</description>
    <label>MNonsUnitVol</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>