force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MOrderQty__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MOrderQty__c</fullName>
    <description>MOrderQty</description>
    <label>MOrderQty</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>