force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MOrderUom__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MOrderUom__c</fullName>
    <description>MOrderUom</description>
    <label>MOrderUom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>