force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MOrigDueDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MOrigDueDate__c</fullName>
    <description>MOrigDueDate</description>
    <label>MOrigDueDate</label>
    <type>DateTime</type>
</CustomField>