force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MOriginalLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MOriginalLine__c</fullName>
    <description>MOriginalLine</description>
    <label>MOriginalLine</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>