force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MPrice__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MPrice__c</fullName>
    <description>MPrice</description>
    <label>MPrice</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>