force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MPriceUom__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MPriceUom__c</fullName>
    <description>MPriceUom</description>
    <label>MPriceUom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>