force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MProductClass__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MProductClass__c</fullName>
    <description>MProductClass</description>
    <label>MProductClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>