force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MReceivedQty__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MReceivedQty__c</fullName>
    <description>MReceivedQty</description>
    <label>MReceivedQty</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>