force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MRelease__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MRelease__c</fullName>
    <description>MRelease</description>
    <label>MRelease</label>
    <length>255</length>
    <type>Text</type>
</CustomField>