force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MRequisition__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MRequisition__c</fullName>
    <description>MRequisition</description>
    <label>MRequisition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>