force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MRequisitionLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MRequisitionLine__c</fullName>
    <description>MRequisitionLine</description>
    <label>MRequisitionLine</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>