force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MReschedDueDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MReschedDueDate__c</fullName>
    <description>MReschedDueDate</description>
    <label>MReschedDueDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>