force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MSalesOrder__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MSalesOrder__c</fullName>
    <description>MSalesOrder</description>
    <label>MSalesOrder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>