force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MSalesOrderLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MSalesOrderLine__c</fullName>
    <description>MSalesOrderLine</description>
    <label>MSalesOrderLine</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>