force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MStockCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MStockCode__c</fullName>
    <description>MStockCode</description>
    <label>MStockCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>