force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MStockDes__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MStockDes__c</fullName>
    <description>MStockDes</description>
    <label>MStockDes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>