force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MStockingUom__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MStockingUom__c</fullName>
    <description>MStockingUom</description>
    <label>MStockingUom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>