force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MSubcontractOp__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MSubcontractOp__c</fullName>
    <description>MSubcontractOp</description>
    <label>MSubcontractOp</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>