force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MSupCatalogue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MSupCatalogue__c</fullName>
    <description>MSupCatalogue</description>
    <label>MSupCatalogue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>