force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MTaxCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MTaxCode__c</fullName>
    <description>MTaxCode</description>
    <label>MTaxCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>