force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MUserAuthReqn__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MUserAuthReqn__c</fullName>
    <description>MUserAuthReqn</description>
    <label>MUserAuthReqn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>