force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MVersion__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MVersion__c</fullName>
    <description>MVersion</description>
    <label>MVersion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>