force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__MWarehouse__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MWarehouse__c</fullName>
    <description>MWarehouse</description>
    <label>MWarehouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>