force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__NComment__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NComment__c</fullName>
    <description>NComment</description>
    <label>NComment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>