force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__NCommentFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NCommentFlag__c</fullName>
    <description>NCommentFlag</description>
    <label>NCommentFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>