force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__NCommentFromLin__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NCommentFromLin__c</fullName>
    <description>NCommentFromLin</description>
    <label>NCommentFromLin</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>