force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__NComPrintType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NComPrintType__c</fullName>
    <description>NComPrintType</description>
    <label>NComPrintType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>