force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__NEdiExtract__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NEdiExtract__c</fullName>
    <description>NEdiExtract</description>
    <label>NEdiExtract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>