force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__NMscChargeFLoc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NMscChargeFLoc__c</fullName>
    <description>NMscChargeFLoc</description>
    <label>NMscChargeFLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>