force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__NMscChargeFor__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NMscChargeFor__c</fullName>
    <description>NMscChargeFor</description>
    <label>NMscChargeFor</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>