force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__NMscChargePrint__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NMscChargePrint__c</fullName>
    <description>NMscChargePrint</description>
    <label>NMscChargePrint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>