force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__NMscChargeTax__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NMscChargeTax__c</fullName>
    <description>NMscChargeTax</description>
    <label>NMscChargeTax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>