force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__NMscChargeValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NMscChargeValue__c</fullName>
    <description>NMscChargeValue</description>
    <label>NMscChargeValue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>