force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__OrderLineStatus__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrderLineStatus__c</fullName>
    <description>OrderLineStatus</description>
    <label>OrderLineStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>