force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__SelectionCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SelectionCode__c</fullName>
    <description>SelectionCode</description>
    <label>SelectionCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>