force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__SelectionType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SelectionType__c</fullName>
    <description>SelectionType</description>
    <label>SelectionType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>