force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__Syspro_Inventory_Master__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Syspro_Inventory_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro Inventory Master</label>
    <referenceTo>CommercientSF__InvMaster__c</referenceTo>
    <relationshipLabel>Syspro Purchase Order Details</relationshipLabel>
    <relationshipName>Syspro_Purchase_Order_Details</relationshipName>
    <type>Lookup</type>
</CustomField>