force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__User1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__User1__c</fullName>
    <description>User1</description>
    <label>User1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>