force-app/main/default/objects/CommercientSF__PorMasterDetail__c/fields/CommercientSF__WithTaxExpenseType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__WithTaxExpenseType__c</fullName>
    <description>WithTaxExpenseType</description>
    <label>WithTaxExpenseType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>